--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,18 @@
 <html>
 	<head lang="en"><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>My New Hugo Site | Home </title><meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>ImFeH2 | Home </title><meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta property="og:image" content=""/>
-	<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="My New Hugo Site" />
+	<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/index.xml" title="ImFeH2" />
 	<meta property="og:url" content="http://localhost:1313/">
-  <meta property="og:site_name" content="My New Hugo Site">
-  <meta property="og:title" content="My New Hugo Site">
+  <meta property="og:site_name" content="ImFeH2">
+  <meta property="og:title" content="ImFeH2">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="My New Hugo Site">
+  <meta name="twitter:title" content="ImFeH2">
 
 	
         <link href="http://localhost:1313/css/fonts.2c2227b81b1970a03e760aa2e6121cd01f87c88586803cbb282aa224720a765f.css" rel="stylesheet">
@@ -35,7 +35,7 @@
 		<div class="content">
 			<header>
 	<div class="main">
-		<a href="http://localhost:1313/">My New Hugo Site</a>
+		<a href="http://localhost:1313/">ImFeH2</a>
 	</div>
 	<nav>
 		
